--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,12 @@ certifi==2023.11.17
 charset-normalizer==3.3.2
 idna==3.6
 iniconfig==2.0.0
+Jinja2==3.1.2
+MarkupSafe==2.1.3
 packaging==23.2
 pluggy==1.3.0
 pytest==7.4.3
+pytest-html==4.1.1
+pytest-metadata==3.0.0
 requests==2.31.0
 urllib3==2.1.0
